--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@
 body {
     font-size: 14px;
   }
-  .main {
+  .main{
+    display:flex;
+    flex-direction: column;
+  }
+  .main_section {
     width: 100%;
     height: 1024px;
     background: rgba(255,255,255,1);
