--- a/stylemobil.css
+++ b/stylemobil.css
@@ -12,7 +12,7 @@
    
    gap: 0px;
    width:100%;
-   height: 100%;
+   height: 100vh;
    
 }
 #background {
@@ -237,10 +237,29 @@
 .boule_videos {
     width: 9rem;
     height: 9rem;
-    background: url("../images/décor/boule 4.png");
+    background: url("../images/décor/boule 6.png");
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 10rem;
+    background-size: 6rem;
+    opacity: 1;
+    position: absolute;
+    top: 32.5rem;
+    left: 16rem;
+    overflow: hidden;
+    border: none;
+    z-index: 2;
+    font-size: 15px;
+    font-weight: bold;
+    text-shadow: -1px 1px 0px #fafafa;
+}
+
+.boule_artbooks {
+    width: 7rem;
+    height: 7rem;
+    background: url("..images/décor/boule 7.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 5.5rem;
     opacity: 1;
     position: absolute;
     top: 38rem;
@@ -249,27 +268,6 @@
     border: none;
     z-index: 2;
     font-size: 15px;
-    font-weight: bold;
-    font-weight: bold;
-    text-shadow: -1px 1px 0px #fafafa;
-}
-
-.boule_artbooks {
-    width: 9rem;
-    height: 9rem;
-    background: url("../images/décor/boule 4.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 10rem;
-    opacity: 1;
-    position: absolute;
-    top: 33rem;
-    left: 17rem;
-    overflow: hidden;
-    border: none;
-    z-index: 2;
-    font-size: 15px;
-    font-weight: bold;
     font-weight: bold;
     text-shadow: -1px 1px 0px #fafafa;
 }
@@ -280,28 +278,34 @@
     justify-content: space-around;
 }
 
-.Jiraya{
+.jiraya{
     width: 5rem;
-    height: 4rem;
-    background: url("../code/images/personnages/giraya_petit02.png");
+    height: 5rem;
+    background: url("../code/images/personnages/jiraya_sur_crapaud.png");
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: 1rem;
+    background-position: center center;
+    background-size: 6rem;
     opacity: 1;
-    overflow: hidden;
+    position: absolute;
+    top: 46rem;
+    left: 1rem;
     border: none;
-    z-index: 2;
 }
 
 
 /*......................footer..................*/
 
-footer{
-    width:100%;
-    height:80px;
+#footer{
     background-color: rgba(189,37,27,1);
-    display:flex;
-    align-content: flex-end;
+    grid-row-start: 8;
+    grid-column-start: 1;
+    grid-row-end: 9;
+    grid-column-end: 9;
+    width: 100%;
+    flex-direction: column;
+    display: flex;
+    align-content: center;
+    justify-content: center;
     
 }
 
