--- a/stylemobil.css
+++ b/stylemobil.css
@@ -254,12 +254,12 @@
 }
 
 .boule_artbooks {
-    width: 7rem;
-    height: 7rem;
-    background: url("..images/décor/boule 7.png");
+    width: 9rem;
+    height: 9rem;
+    background: url("../images/décor/boule 7.png");
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 5.5rem;
+    background-size: 6rem;
     opacity: 1;
     position: absolute;
     top: 38rem;
@@ -279,17 +279,15 @@
 }
 
 .jiraya{
-    width: 5rem;
-    height: 5rem;
-    background: url("../code/images/personnages/jiraya_sur_crapaud.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 6rem;
+    width: 9rem;
+    height: 9rem;       
     opacity: 1;
     position: absolute;
     top: 46rem;
-    left: 1rem;
+    left: 13rem;
+    overflow: hidden;
     border: none;
+    z-index: 2;
 }
 
 
@@ -369,6 +367,77 @@
     border: none;
     z-index: 2;
 }
+#display_shonen{
+    background-color: antiquewhite;
+    max-height:35vh;
+    max-width: 50vh;
+    border-style: double;
+    border-radius: 5%;
+    border-color: black;
+    z-index: 3;
+    margin:auto;
+    text-align: justify;
+    overflow: scroll;
+    padding: 5px;
+    z-index: 10;
+}
+#display_seinen{
+    background-color: antiquewhite;
+    max-height:35vh;
+    max-width: 50vh;
+    border-style: double;
+    border-radius: 5%;
+    border-color: black;
+    z-index: 3;
+    margin:auto;
+    text-align: justify;
+    overflow: scroll;
+    padding: 5px;
+    z-index: 10;
+}
+#display_shojo{
+    background-color: antiquewhite;
+    max-height:35vh;
+    max-width: 50vh;
+    border-style: double;
+    border-radius: 5%;
+    border-color: black;
+    z-index: 3;
+    margin:auto;
+    text-align: justify;
+    overflow: scroll;
+    padding: 5px;
+    z-index: 10;
+}
+#display_artbooks{
+    background-color: antiquewhite;
+    max-height:35vh;
+    max-width: 50vh;
+    border-style: double;
+    border-radius: 5%;
+    border-color: black;
+    z-index: 3;
+    margin:auto;
+    text-align: justify;
+    overflow: scroll;
+    padding: 5px;
+    z-index: 10;
+}
+#display_liseuse{
+    background-color: antiquewhite;
+    max-height:35vh;
+    max-width: 50vh;
+    border-style: double;
+    border-radius: 5%;
+    border-color: black;
+    z-index: 3;
+    margin:auto;
+    text-align: justify;
+    overflow: scroll;
+    padding: 5px;
+    z-index: 10;
+}
+
 
 
 
